utils/alb/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dlk-monitoring-grafana
  namespace: dlk-fe-next
spec:
  type: ExternalName
  externalName: dlk-monitoring-grafana.dlk-monitoring.svc.cluster.local
