utils/alb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dlk-fe-next-ingress
  namespace: dlk-fe-next
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:084550838259:certificate/cde6b6e2-653d-4dff-82db-6b92fc1c7405
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
  - host: eks.dlink.my
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dlk-fe-next-svc
            port:
              number: 2100
